# fast_cd

./: ..gitmodules.un~  .CMakeLists.txt.un~  .gitmodules  .nfs0000000002ac0dc200000001  CMakeLists.txt  CMakeLists.txt~  RotatingRigController.h  arap_fast_cd_sim.h  compute_bbw_weights.h
get_relative_parameters/: Source.cpp
include/: .fit_rig_to_mesh.h.un~  Bone.h  CDLocalGlobalSolver.h  CDNewtonSolver.h  CholModSimplicialLDLTSymShiftInvert.h  CholModSymShiftInvert.h  ConstraintController.h  ConstraintControllerCentroidBall.h  ConstraintControllerSquashStretch.h  DenseQuasiNewtonSolver.h  EigenHook.h  ExampleHook.h  FastCDLocalGlobalSolver.h  FastCDNewtonSolver.h  FastCDViewer.h  HandleRig.h  HandleRigController.h  InteractiveCDHook.h  LBSHook.h  LeftRightScriptedHandleRigController.h  MeshRecorder.h  NullRigControllerScriptedConstrainedBall.h  PhysicsHook.h  QuasiNewtonSolver.h  Recorder.h  RigController.h  RigReader.h  RotatingRigController.h  ScalarRecorder.h  ScriptedRigController.h  SimplicialLDLTSymShiftInvert.h  Skeleton.h  SkeletonRig.h  SkeletonRigFKMouseController.h  UMFPACKSymShiftInvert.h  VectorRecorder.h  arap_hessian.h  augment_with_linear_constraints.h  cd_arap_local_global_solver.h  cd_arap_precomp.h  (+166 more)
src/: Bone.cpp  CDLocalGlobalSolver.cpp  CDNewtonSolver.cpp  ConstraintControllerCentroidBall.cpp  ConstraintControllerSquashStretch.cpp  DenseQuasiNewtonSolver.cpp  EigenHook.cpp  FastCDLocalGlobalSolver.cpp  FastCDNewtonSolver.cpp  FastCDViewer.cpp  HandleRig.cpp  HandleRigController.cpp  IneractiveCDHook.cpp  LBSHook.cpp  LeftRightScriptedHandleRigController.cpp  NullRigControllerScriptedConstrainedBall.cpp  QuasiNewtonSolver.cpp  SkeletonRig.cpp  SkeletonRigFKMouseController.cpp  arap_hessian.cpp  augment_with_linear_constraints.cpp  complementary_equality_constraints.cpp  compute_bbw_weights.cpp  compute_clusters_igl.cpp  compute_clusters_matlab.cpp  compute_compressed_vibration_modes.cpp  compute_handle_positions_from_rig_parameters.cpp  compute_lsd_modes.cpp  compute_modes.cpp  compute_modes_matlab.cpp  compute_modes_spectra.cpp  constant_term_rotation_matrix.cpp  copmute_bbw_weights.cpp  copy_skeleton_at.cpp  covariance_scatter_matrix.cpp  create_affine_rig_json.cpp  create_two_handle_rig.cpp  deformation_gradient.cpp  deformation_gradient_from_u_prefactorized_matrices.cpp  end_effectors_objective_and_gradient.cpp  (+72 more)
